@@ -268,8 +268,10 @@ public class DiscordSRVProvider implements DiscordChatProvider {
 
     @Override
     public String getChannelFromName(String name) {
-        GuildChannel channel = this.discord.getJda().getTextChannelsByName(name, true).get(0);
-        return channel == null ? null : channel.getAsMention();
+        List<TextChannel> channels = this.discord.getJda().getTextChannelsByName(name, true);
+        if (!channels.isEmpty())
+            return channels.getFirst().getAsMention();
+        return null;
     }
 
     @Override
@@ -352,9 +354,6 @@ public class DiscordSRVProvider implements DiscordChatProvider {
             UUID uuid = this.discord.getAccountLinkManager().getLinkedAccounts().get(accountId);
             OfflinePlayer player = Bukkit.getOfflinePlayer(uuid);
 
-            if (player == null)
-                break;
-
             int matchLength = this.getMatchLength(input, player.getName());
             if (matchLength != -1) {
                 Member member = this.discord.getMainGuild().getMemberById(accountId);
@@ -371,7 +370,7 @@ public class DiscordSRVProvider implements DiscordChatProvider {
         for (GuildChannel channel : this.discord.getMainGuild().getChannels()) {
             int matchLength = this.getMatchLength(input, channel.getName());
             if (matchLength != -1)
-                return new DetectedMention(this.getChannelFromName(channel.getName()), channel.getAsMention(), matchLength);
+                return new DetectedMention(channel.getName(), channel.getAsMention(), matchLength);
         }
 
         return null;
@@ -384,7 +383,7 @@ public class DiscordSRVProvider implements DiscordChatProvider {
             int memberChar = Character.toUpperCase(memberName.codePointAt(j));
             if (inputChar == memberChar) {
                 matchLength++;
-            } else if (i > 0 && (Character.isSpaceChar(inputChar) || Pattern.matches(MessageUtils.PUNCTUATION_REGEX, String.valueOf(Character.toChars(inputChar))))) {
+            } else if (i > 0 && (Character.isSpaceChar(inputChar) || MessageUtils.PUNCTUATION_REGEX.matcher(String.valueOf(Character.toChars(inputChar))).matches())) {
                 return matchLength;
             } else {
                 return -1;
